# Coding-Agent

./: .gitignore  MANIFEST.in  README.md  chat_history.db  database.py  explain.txt  main.py  next_task.txt  pyproject.toml  requirements.txt  server.py  test_sample.py
agent/: Dockerfile  chat.py  cli.py  config.py  help.py  tool_declarations.py  tools.py  utils.py
